@@ -19,7 +19,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
