@@ -20,8 +20,6 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.9.10</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
