@@ -26,8 +26,6 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.3.0</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
