@@ -83,16 +83,22 @@
     <modules>
         <module>core</module>
         <module>api</module>
-        <module>examples</module>
         <module>modules</module>
         <module>tests</module>
-        <module>release</module>
         <module>reflect</module>
         <module>classloading</module>
     </modules>
     <properties>
         <easymock.version>3.4</easymock.version>
         <hamcrest.version>1.3</hamcrest.version>
+        <assertj.version>3.4.1</assertj.version>
+        <cglib.version>2.2.2</cglib.version>
+        <objenesis.version>2.2</objenesis.version>
+        <javaassist.version>3.20.0-GA</javaassist.version>
+        <junit.usage.version>4.12</junit.usage.version>
+        <junit.rules.version>4.8.2</junit.rules.version>
+        <testng.version>6.9.10</testng.version>
+        <xstream.version>1.4.9</xstream.version>
     </properties>
     <build>
         <plugins>
@@ -325,6 +331,18 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>acceptance</id>
+            <modules>
+                <module>examples</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>release</id>
+            <modules>
+                <module>release</module>
+            </modules>
+        </profile>
     </profiles>
     <dependencyManagement>
         <dependencies>
@@ -348,7 +366,7 @@
             <dependency>
                 <groupId>org.objenesis</groupId>
                 <artifactId>objenesis</artifactId>
-                <version>2.2</version>
+                <version>${objenesis.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.hamcrest</groupId>
@@ -358,13 +376,35 @@
             <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib-nodep</artifactId>
-                <version>2.2.2</version>
+                <version>${cglib.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
-                <version>3.3.0</version>
+                <version>${assertj.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>${javaassist.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.usage.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.thoughtworks.xstream</groupId>
+                <artifactId>xstream</artifactId>
+                <version>${xstream.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>${testng.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
