@@ -14,6 +14,7 @@ Change log next version
 * Upgraded commons-logging dependency to version 1.2
 * Upgraded objenesis dependency to version 2.2
 * Upgraded TestNG dependency to version 6.9.10.
+* Upgraded xStream dependency to version 1.4.9.
 * ASM for PowerMock Javaagent repackaged from new version 5.0.4
 
 Change log 1.6.4 (2015-12-11)
